--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/router": "5.0.3",
-    "@ngrx/effects": "4.1.0",
+    "@ngrx/effects": "^5.2.0",
     "@ngrx/router-store": "4.1.1",
-    "@ngrx/store": "4.1.0",
+    "@ngrx/store": "^4.1.0",
     "@ngrx/store-devtools": "4.0.0",
     "core-js": "2.5.1",
     "reflect-metadata": "0.1.10",
